--- a/client/src/components/styles/Footer.css
+++ b/client/src/components/styles/Footer.css
@@ -94,3 +94,13 @@
     grid-column: 1 / span 2;
   }
 }
+
+@media only screen and (max-width: 450px) {
+  .foot {
+    display: block;
+  }
+
+  .newsletter {
+    grid-template-columns: 1fr;
+  }
+}
