--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -9,3 +9,9 @@
 .logo {
   width: 500px;
 }
+
+@media only screen and (max-width: 450px) {
+  .logo {
+    width: 100vw;
+  }
+}
